--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,29 @@ body {
   height: 32px;
 }
 
+/* Custom slim scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* firefox slim sxfrollbar */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+
 /* Ring spinner */
 .lds-dual-ring:after {
   content: "";
@@ -37,4 +60,32 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.nav-item::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 50%;
+  background-color: #024eff;
+  width: 0;
+  border-radius: 0 5px 5px 0;
+  opacity: 0;
+  transition: 0.3s;
+  animation: indicatorAnimation 0.3s forwards;
+}
+
+@keyframes indicatorAnimation {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  100% {
+    width: 5px;
+    opacity: 1;
+  }
+}
+
+.mini {
+  text-shadow: 0 0 0.2rem;
 }
