--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,59 @@ body {
   /* box-sizing: border-box; */
 }
 
+.hero {
+  background-image: url('../assets/wires.png');
+}
+
+.land-header {
+  --bg-color: transparent;
+  background: var(--bg-color);
+  backdrop-filter: blur(10px);
+}
+
+section {
+  height: 100dvh;
+  width: 100dvw;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  place-items: center;
+  padding-inline: 10rem;
+}
+
+.anim-btn {
+  position: relative;
+  isolation: isolate;
+  overflow: hidden;
+}
+
+.anim-btn:hover,
+.anim-btn:focus-visible {
+  color: #024eff;
+}
+
+.anim-btn::before,
+.anim-btn:focus-visible::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  height: 100%;
+  background-color: white;
+  border-radius: 0;
+  width: 100%;
+  transition: transform 0.3s;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+
+.anim-btn:hover::before,
+.anim-btn:focus-visible::before {
+  transform: scaleX(1);
+  /* transform-origin: left; */
+}
+
 .lds-dual-ring,
 .lds-dual-ring:after {
   box-sizing: border-box;
@@ -43,7 +96,7 @@ body {
 
 /* Ring spinner */
 .lds-dual-ring:after {
-  content: "";
+  content: '';
   display: block;
   width: 22px;
   height: 22px;
@@ -63,7 +116,7 @@ body {
 }
 
 .nav-item::before {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   height: 50%;
