feat: implement landing page updates with new CreateLinkButton and Footer components, and refactor Features section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@ section {
   width: 100%;
   transition: transform 0.3s;
   transform: scaleX(0);
-  transform-origin: right;
+  /* transform-origin: right; */
 }
 
 .anim-btn:hover::before,
